--- a/debian/architectures/amd64/demoiselle-infra/pom.xml
+++ b/debian/architectures/amd64/demoiselle-infra/pom.xml
@@ -2,14 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demoiselle-2-infra-4</artifactId>
+    <artifactId>demoiselle-3-infra-1</artifactId>
     <packaging>pom</packaging>
     
     <name>${project.artifactId}</name>
-    <url>http://www.frameworkdemoiselle.gov.br</url>
+    <url>http://demoiselle.sourceforge.net/infra/</url>
     <description>
-        Complete development environment for Demoiselle Framework 2.x
-        Homepage: http://demoiselle.sourceforge.net/infra/
+        Complete development environment for Demoiselle Framework 3.x
     </description>
 
     <parent>
