--- a/debian/architectures/i386/demoiselle-infra/src/deb/control/control
+++ b/debian/architectures/i386/demoiselle-infra/src/deb/control/control
@@ -1,9 +1,9 @@
 Package: [[name]]
-Version: 4.0
+Version: 1.0.0
 Section: universe/devel
 Priority: standard
 Architecture: i386
-Depends: demoiselle-eclipse-4.4.2 (>=4.4.2), maven(>=3.0.4) | demoiselle-maven-3 (>=3.0.5), demoiselle-maven-repo (>=3.2.0), demoiselle-workspace (>=2.1), demoiselle-tomcat-7.0 (>=7.0), demoiselle-jboss-7.1 (>=7.1.1)
-Suggests: demoiselle-2-infra-3-extra (>=2.0)
+Depends: demoiselle-eclipse-4.6.0 (>=4.6.0), maven(>=3.0.4) | demoiselle-maven-3 (>=3.0.5), demoiselle-maven-repo (>=3.3.0), demoiselle-workspace (>=3.0), demoiselle-wildfly-10 (>=10.0.0)
+Suggests: demoiselle-3-infra-1-extra (>=3.0)
 Maintainer: Demoiselle Framework <demoiselle-users@lists.sourceforge.net>
 Description: [[description]]
